game model update